Initial Site Upload To Github Pages for Static Testing

--- a/index.html
+++ b/index.html
@@ -1,1 +1,132 @@
-<h1>Code_Otter</h1>
+<!Doctype html>
+<html>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Code-Otter</title>
+	
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Chakra+Petch:400,700" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
+
+
+</head>
+	
+<body>
+
+	<nav class="navbar navbar-default">
+		<!-- Brand and toggle get grouped for better mobile display -->
+	
+		
+		<div class="container">
+
+			<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#"><i class="fas fa-paw"></i>   Code_Otter</a>
+			</div>
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			  <ul class="nav navbar-nav">
+			  </ul>
+
+			  <ul class="nav navbar-nav navbar-right">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="lessons.html">Lessons</a></li>
+				<li><a href="codeInvaders.html">Code Invaders</a></li>
+				<li><a href="signin.html">Sign In</a></li>
+
+			  </ul>
+			</div><!-- /.navbar-collapse -->
+		</div>
+	</nav>
+
+
+	<header>
+			<h1><i class="fas fa-paw"></i>Code_Otter</h1>
+			<div class="headerWrapper">
+				<div class="animationWrapper">
+					<div class = "animationContainer">
+							<div class = "line1 line "></div>
+							<div class = "line2 line "></div>
+							<div class = "line3 line "></div>
+							<div class = "line4 line "></div>
+							<div class = "line5 line "></div>
+					</div>
+					<div class = "animationContainer2">
+							<div class = "line6 line "></div>
+							<div class = "line7 line "></div>
+							<div class = "line8 line "></div>
+							<div class = "line9 line "></div>
+							<div class = "line10 line "></div>
+					</div>
+				</div>
+				
+			</div>
+			<h2>Wanna Learn How To Program, This is the Place To Start!</h2>
+	</header>
+
+	<div class="whyOtter">
+		<div class="container">
+			<h1>Why Use Code_Otter?</h1>
+
+			<div class="row">
+					<div class="col-lg-4">
+						<h2>Resources</h2>
+						<i class="fas fa-book-open"></i>	
+						<p>An Entire Uni student worth of research went into 
+						creating the best all round resources for teaching programming using the python
+						programming language. From extensive exercises to precise but readable
+						lessons, this is the right place to learn
+						</p>
+					</div>
+
+					<div class="col-lg-4">
+						<h2>Code-Alongs</h2>
+						<i class="fas fa-keyboard"></i>
+						<p> One of the best tested methods for teaching coding is code-along videos so you 
+						can understand the entire process of writing software and creative problem 
+						solving from start to finish
+						</p>
+					</div>
+
+					<div class="col-lg-4">
+						<h2>Competetive Coding</h2>
+						<i class="fas fa-medal"></i>
+						<p>Compete with your friends and other learners all over the world through
+						the use of competetive coding exercises, racing for the best times, and competing 
+						for the best scores
+						</p>
+
+					</div>
+				</div>
+		</div>
+	</div>
+
+	<footer class="footer">
+		<div class="container">
+		  <h3>Code-Otter</h3>
+		  	<div class="socialLinks">
+		 	 <i class="fab fa-facebook"></i>
+		 	 <i class="fab fa-twitter-square"></i>
+		 	 <i class="fab fa-google-plus-square"></i>
+		 	 <i class="fas fa-envelope-square"></i>
+			</div>
+		</div>
+	  </footer>
+
+
+
+
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="scripts.js"></script>
+	
+
+</body>
+</html>
