--- a/lesson_1_1.html
+++ b/lesson_1_1.html
@@ -68,7 +68,7 @@
 			<h3>Installation</h3>
 			
 			<p>Go to https://www.python.org/ and navigate to the downloads page.<br><br>
-			<img class = "lessonIMG" src = "Code_Otter/lesson_images/section0/image1_1.png"><br><br>
+			<img class = "lessonIMG" src = "..//lesson_images/section0/image1_1.png"><br><br>
 			Scroll down and find the download link for the latest version of python version 3 (Python 3.6.5 at 
 			the time of writing) and click the link that says download to open the next page. <br><br>
 			<img class = "lessonIMG" src = "lesson_images/section0/image1_2.png"><br><br>
