--- a/lesson_1_1.html
+++ b/lesson_1_1.html
@@ -68,10 +68,10 @@
 			<h3>Installation</h3>
 			
 			<p>Go to https://www.python.org/ and navigate to the downloads page.<br><br>
-			<img class = "lessonIMG" src = "tobykerslake.com/lesson_images/section0/image1_1.png"><br><br>
+			<img class = "lessonIMG" src = "tobykerslake.com/lesson_images/section0/image1_1.PNG"><br><br>
 			Scroll down and find the download link for the latest version of python version 3 (Python 3.6.5 at 
 			the time of writing) and click the link that says download to open the next page. <br><br>
-			<img class = "lessonIMG" src = "lesson_images/section0/image1_2.png"><br><br>
+			<img class = "lessonIMG" src = "lesson_images/section0/image1_2.PNG"><br><br>
 			Scroll down and find the appropriate installer for your operating system. This will likely be 
 			“Windows x86-64 executable installer” if you’re using windows or “macOS 64-bit installer” if 
 			you’re using a mac, but be sure to check if you’re unsure. Click the link and the download 
@@ -85,14 +85,14 @@
 			still use python 2 is library support but this is getting less relevant day by day. Most
 			importantly after learning python 3 python 2 will be incredibly easy to pick up in the future
 			if you ever need to use it.<br><br>
-			<img class = "lessonIMG" src = "/lesson_images/section0/image1_3.png"><br><br>
+			<img class = "lessonIMG" src = "/lesson_images/section0/image1_3.PNG"><br><br>
 			Now run the installer and follow the instructions.
 			</p>
 			
 			<h3> Windows Installation </h3>
 			
 			<p>
-			<img class = "lessonIMG" src = "/lesson_images/section0/image1_4.png"><br><br>
+			<img class = "lessonIMG" src = "/lesson_images/section0/image1_4.PNG"><br><br>
 			When installing Python make sure to tick the box that says “Add Python to Path” as this will be 
 			useful in the future. Although this can be done later on it can be difficult and confusing if you 
 			aren’t familiar with the PATH environment variable in windows. Hit Install Now or do a custom 
@@ -115,12 +115,12 @@
 			by your operating system. Essentially it runs your programs. Shell is what is known as an “interactive shell”, which 
 			basically means we can use it as a sort of testing ground or scratch pad for testing certain lines of code. 
 
-			<br><br><img class = "lessonIMG" src = "/lesson_images/section0/image1_5.png"><br><br>
+			<br><br><img class = "lessonIMG" src = "/lesson_images/section0/image1_5.PNG"><br><br>
 
 			For example, if we type print (“This is the shell”) and hit enter the shell will output or 
 			“print” the text back at us. 
 			
-			<br><br><img class = "lessonIMG" src = "/lesson_images/section0/image1_6.png"><br><br>
+			<br><br><img class = "lessonIMG" src = "/lesson_images/section0/image1_6.PNG"><br><br>
 
 			The text inside the quotation marks can then be changed to anything you want. Go ahead and try.
 			</p>
