Auto stash before merge of "master" and "origin/master"
Merged back to master branch and also fixed image file extensions(.png) not being capitals which upsets git hub hosting

--- a/lesson_1_2.html
+++ b/lesson_1_2.html
@@ -90,7 +90,7 @@
 			<p>
 			Find and open IDLE. You will be greeted by the shell. The shell is interactive meaning we can execute code line by line. You can try this by entering some simple
 			calculations into the shell. For example try typing 2 + 2 and hitting enter. The shell should output 4 as a result.
-			<br><br><img class = "lessonIMG" src = "lesson_images/section0/image2_1.png"><br><br>
+			<br><br><img class = "lessonIMG" src = "lesson_images/section0/image2_1.PNG"><br><br>
 			Now try over calculations, Remember Python follows bidmas rules for arithmetic and its best practice to organise large equations in brackets. Python use * as its
 			multiplication operator and / as a divide operator. We will go over different arithmetic operations in the coming chapters. 
 			</p>
