--- a/lesson_1_3.html
+++ b/lesson_1_3.html
@@ -60,7 +60,7 @@
 			<h3>Creating A New Python File</h3>
 			
 			<p>First open IDLE and go to file and select new file to open a blank python file in IDLE. 
-			<br><br><img class = "lessonIMG" src = "lesson_images/section0/image3_1.png"><br><br>
+			<br><br><img class = "lessonIMG" src = "lesson_images/section0/image3_1.PNG"><br><br>
 			</p>
 			
 			<h3>Writing Your First Program</h3>
@@ -72,19 +72,19 @@
 			in the brackets is referred to as an “argument”. Any argument could be an number, or a string of text. 
 			Feel free to enter whatever you want in the brackets as long as its between two quotation marks, like in the
 			example below. IDLE highlights strings in green text so you can easily identify whether you have done this correctly.
-			<br><br><img class = "lessonIMG" src = "lesson_images/section0/image3_2.png"><br><br>
+			<br><br><img class = "lessonIMG" src = "lesson_images/section0/image3_2.PNG"><br><br>
 			Now save this file as any name you want, something like firstprogram.py . Now go to the Run menu option and select Run Module,
 			or press f5. This will begin running and interpreting your program in Shell.
-			<br><br><img class = "lessonIMG" src = "lesson_images/section0/image3_3.png"><br><br>
-			<br><br><img class = "lessonIMG" src = "lesson_images/section0/image3_4.png"><br><br>
+			<br><br><img class = "lessonIMG" src = "lesson_images/section0/image3_3.PNG"><br><br>
+			<br><br><img class = "lessonIMG" src = "lesson_images/section0/image3_4.PNG"><br><br>
 			Now go back to your file and change the string inside the green text to anything else you want and save and run the program again. 
 			Notice how the text changes. 
-			<br><br><img class = "lessonIMG" src = "lesson_images/section0/image3_5.png"><br><br>
+			<br><br><img class = "lessonIMG" src = "lesson_images/section0/image3_5.PNG"><br><br>
 			You can even remove the quotation marks and enter just a number by itself. Try this and notice how it outputs the number in a similar
 			fashion to the text but does not require quotation marks. That's because python recognises numbers as their relative data types and knows
 		    how to treat them in this context. Now try and enter some text without enclosing the string with quotation marks and then saving and
 			running then program. 
-			<br><br><img class = "lessonIMG" src = "lesson_images/section0/image3_6.png"><br><br>
+			<br><br><img class = "lessonIMG" src = "lesson_images/section0/image3_6.PNG"><br><br>
 			You should receive an error similar to this. This is because without the quotation marks the interpreter doesn’t know to treat the text 
 			as a string data type as cant pass it as an argument into the print function.
 			</p>
