--- a/lesson_2_1.html
+++ b/lesson_2_1.html
@@ -68,7 +68,7 @@
 			pair of brackets containing the integer. Although int doesn’t always have to be specified as numbers that do not contain decimal points default to the datatype int. 
 			It does have to be used however if we cant to convert another datatype to an integer equivalent. For example if we have the number 5.7, or the string “5”. Try 
 			playing around with these different data types and the keyword int in the shell, you should get similar results to the ones below.
-			<br><br><img class = "lessonIMG" src = "lesson_images/section2/image1_1.png"><br><br>
+			<br><br><img class = "lessonIMG" src = "lesson_images/section2/image1_1.PNG"><br><br>
 			</p>
 
 			<h3>Floats</h3>
@@ -77,7 +77,7 @@
 			Floats, more commonly known in the world of maths as decimals, are floating point numbers, meaning they have a decimal point somewhere in the number. A number can be 
 			a float regardless of the position of the decimal point. For example 5.7 and 0.77802 are both floating point numbers. There are defined in python by the keyword float. 
 			Feel free to try this now in the shell, as see what happens if you enter float(1).	
-			<br><br><img class = "lessonIMG" src = "lesson_images/section2/image1_2.png"><br><br>
+			<br><br><img class = "lessonIMG" src = "lesson_images/section2/image1_2.PNG"><br><br>
 			</p>
 
 			<h3>Other Numbers</h3>
@@ -91,7 +91,7 @@
 			<h3>Operations</h3>
 			Numbers in python have a series of operations that can be performed on them. These include standard mathematical operations like addition, subtraction, multiplication 
 			.etc. Some useful operations you may not be aware of include Modulus, represented by a % symbol. This finds the remainder of the vision between the 2 numbers its provided with. 
-			<br><br><img class = "lessonIMG" src = "lesson_images/section2/image1_3.png"><br><br>
+			<br><br><img class = "lessonIMG" src = "lesson_images/section2/image1_3.PNG"><br><br>
 			<p>
 
 			</p>
