--- a/lesson_3_1.html
+++ b/lesson_3_1.html
@@ -76,7 +76,7 @@
 			<h3>If Statements</h3>
 			
 			<p>The simple if statement works by using the keyword if, followed by the conditional criteria, followed by a colon :, followed by a line of code that is only executed IF the conditional criteria is fulfilled. This line of code is indented on another line. The way you can indent code using IDLE is by using the tab key. IDLE also should indent automatically if you hit enter after a colon. A demonstration of a simple if statement is presented below.
-			<br><br><img class = "lessonIMG" src = "lesson_images/section3/image1_1.png"><br><br>
+			<br><br><img class = "lessonIMG" src = "lesson_images/section3/image1_1.PNG"><br><br>
 			</p>
 
 			<p>
@@ -88,12 +88,12 @@
 			<p>
 				The else statement can be used following an If statement. It allows you to provide another section of code that's performed if the conditional criteria for the If statement is not met. This means we can provide an output for when b is smaller than a. Like in the example below. 
 		
-			<br><br><img class = "lessonIMG" src = "lesson_images/section3/image1_2.png"><br><br>
+			<br><br><img class = "lessonIMG" src = "lesson_images/section3/image1_2.PNG"><br><br>
 			</p>
 
 			<p>
 				Now what if b and a are the same value? Give it a go. See how it still says that b is smaller than a even though they are the same value. We need another conditional statement for if b and a are the same value. Now one way this could be done would be by just adding another If statement like the one below.
-				<br><br><img class = "lessonIMG" src = "lesson_images/section3/image1_3.png"><br><br>
+				<br><br><img class = "lessonIMG" src = "lesson_images/section3/image1_3.PNG"><br><br>
 			</p>
 
 			<p>
@@ -104,12 +104,12 @@
 
 			<p>
 					Else If Statements allow you to write another set of conditional criteria incase the first If statement is not met. This means that we can add another if statement that will only execute if the first one fails, meaning we won't have to execute unnecessary code. Check the example below.
-					<br><br><img class = "lessonIMG" src = "lesson_images/section3/image1_4.png"><br><br>			
+					<br><br><img class = "lessonIMG" src = "lesson_images/section3/image1_4.PNG"><br><br>			
 			</p>
 
 			<p>
 				You can use as many elif statements that you like, for example you could add another that detects if a and b are a negative number. Feel free to give this a go. You can even start nesting if statements. This is where you put if statements inside the initial statements code block, like in the example below. 	
-			<br><br><img class = "lessonIMG" src = "lesson_images/section3/image1_5.png"><br><br>
+			<br><br><img class = "lessonIMG" src = "lesson_images/section3/image1_5.PNG"><br><br>
 			</p>
 
 			<p>
