--- a/lesson_3_2.html
+++ b/lesson_3_2.html
@@ -64,12 +64,12 @@
 			<h3>Basic For Loop</h3>
 			
 			<p>The syntax for a for loop consists of “for a in b”. “a” is essentially a new variable that you can reference inside your for loop that's incremented with each loop. Essentially it tells you what iteration in the loop you are. Depending on the data you're working with in “b” its usually either a number or a string. For example check out the code below.
-				<br><br><img class = "lessonIMG" src = "lesson_images/section3/image2_1.png"><br><br>
+				<br><br><img class = "lessonIMG" src = "lesson_images/section3/image2_1.PNG"><br><br>
 			</p>
 
 			<p>
 					This simple piece of code takes a string variable called myString and then iterates through each letter of the string. This is easy with python since it automatically recognises the string in the for loop and assumes you’re gonna want to iterate through each letter. In each iteration the program prints the letter. This is because the for loop repeats the code inside the loop for each value inside the second argument, in this case myString. For example if you changed the value of myString to a longer word the loop would still output every character from that string. Give it a go. Your output should look something like this.
-					<br><br><img class = "lessonIMG" src = "lesson_images/section3/image2_2.png"><br><br>
+					<br><br><img class = "lessonIMG" src = "lesson_images/section3/image2_2.PNG"><br><br>
 			</p>
 
 			<h3>Range</h3>
@@ -77,16 +77,16 @@
 			<p>
 					Something you’ll end up using frequently with for loops in python is a function called the range() function. The range function is placed in the “b” section of the for loop and allows you to specify a range of numbers you want to iterate or “loop” through. For example the code for x in range(6) iterates through 0 to 5 since it stops before the number you specify. You can also specify a specific starting number by separating it and then last number with a comma. This is shown in the code below:
 		
-					<br><br><img class = "lessonIMG" src = "lesson_images/section3/image2_3.png"><br><br>
+					<br><br><img class = "lessonIMG" src = "lesson_images/section3/image2_3.PNG"><br><br>
 
 					Python also has something called <b>Break Statements</b>. These allow you to exit the loop once a specific criteria is met by combining it with an if statement. This is presented below.
-					<br><br><img class = "lessonIMG" src = "lesson_images/section3/image2_4.png"><br><br>
+					<br><br><img class = "lessonIMG" src = "lesson_images/section3/image2_4.PNG"><br><br>
 
 					This ends the loop once x is equal to 4. Obviously this isn’t a practical use of this application but once we get more in depth break statements become a very useful tool. 
 
 					<br>You can also add a third argument to the range function that allows you to change what rate the for loop increments. This means instead of iterating through every number in the range you can just loop through every second number, or every fifth number. It's also possible to nest for loops just like we nested if statements inside each other. Both of these applications are presented in the below example.
-					<br><br><img class = "lessonIMG" src = "lesson_images/section3/image2_5.png"><br><br>
-					<br><br><img class = "lessonIMG" src = "lesson_images/section3/image2_6.png"><br><br>
+					<br><br><img class = "lessonIMG" src = "lesson_images/section3/image2_5.PNG"><br><br>
+					<br><br><img class = "lessonIMG" src = "lesson_images/section3/image2_6.PNG"><br><br>
 			</p>
 
 			<p>
