--- a/lesson_3_3.html
+++ b/lesson_3_3.html
@@ -65,7 +65,7 @@
 			
 			<p>While loops are useful for making sure a user enters the correct information, for example if your program asks for someone's age, you’re gonna want to make sure they don’t enter an age below zero since your age can’t be negative. This is what the code below does, check it out:
 
-				<br><br><img class = "lessonIMG" src = "lesson_images/section3/image3_1.png"><br><br>
+				<br><br><img class = "lessonIMG" src = "lesson_images/section3/image3_1.PNG"><br><br>
 			</p>
 
 			<p>
