--- a/lesson_3_4.html
+++ b/lesson_3_4.html
@@ -71,19 +71,19 @@
 			
 			<p>
 					So we’re going to start by creating the variables we specified above.  We need two string inputs from the user and then get two random integers to represent the dice rolls. Let’s also add some nice print statements to make the user experience nicer. Don’t forget to import the random module.
-				<br><br><img class = "lessonIMG" src = "lesson_images/section3/image4_1.png"><br><br>
+				<br><br><img class = "lessonIMG" src = "lesson_images/section3/image4_1.PNG"><br><br>
 			</p>
 
 			<h3>Adding the Conditionals</h3>
 			
 			<p>
 				Okay now we can add the if statements to output which player wins based on the dice roll. This is demonstrated below.
-				<br><br><img class = "lessonIMG" src = "lesson_images/section3/image4_2.png"><br><br>
+				<br><br><img class = "lessonIMG" src = "lesson_images/section3/image4_2.PNG"><br><br>
 			</p>
 
 			<p>
 				Finally we have to add a while loop to make sure that player 1 and 2 have different names. We do this by first assigning the player2 variable to have the same value as player1 when player1 sets their name. The prompt to get player 2’s user name should then be placed in a while loop that executes while player2 has the same value as player1. Inside this while loop we should also use an if statement so that if the player1 and player2 have the same value we can prompt the user to enter a different name before the loop starts again.
-				<br><br><img class = "lessonIMG" src = "lesson_images/section3/image4_3.png"><br><br>
+				<br><br><img class = "lessonIMG" src = "lesson_images/section3/image4_3.PNG"><br><br>
 			</p>
 
 			<p>
