--- a/lesson_2_3.html
+++ b/lesson_2_3.html
@@ -73,7 +73,7 @@
 
 			<p>
 					Some notable ways of manipulating strings are listed in the table below. These can be very helpful in some applications are we will use them in exercises later in this tutorial.
-			<br><br><img class = "lessonIMG" src = "lesson_images/section2/image2_1.png"><br><br>
+			<br><br><img class = "lessonIMG" src = "lesson_images/section2/image2_1.PNG"><br><br>
 			</p>
 
 			<p>
