Major Update Push For Even More Mobile Testing

--- a/codeInvaderL2.html
+++ b/codeInvaderL2.html
@@ -3,13 +3,13 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Code-Invaders</title>
-    <script src="codeInvader.js"></script>
+    <script src="codeInvaderL2.js"></script>
 	
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Chakra+Petch:400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
-
+	<script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
 
 </head>
 	
@@ -39,7 +39,6 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="lessons.html">Lessons</a></li>
-				<li><a href="codeInvaders/codeInvaders.html">Code Invaders</a></li>
 				<li><a href="signin.html">Sign In</a></li>
 
 			  </ul>
@@ -47,9 +46,14 @@
 		</div>
 	</nav>
 
-    <div class="container">
-        <canvas id="gc" width = "800" height = "500"></canvas>
-    </div>
+	<div class="about">
+		<div class="container">
+			<canvas id="gc" width = "800" height = "500"></canvas>
+			<h3>Warning: This section of the site is not compatible with Internet Explorer or Mobile Devices</h3>
+		</div>
+	</div>
+  
+
 	
 
 	<footer class="footer">
@@ -62,14 +66,13 @@
 		 	 <i class="fas fa-envelope-square"></i>
 			</div>
 		</div>
-	</footer>
+	  </footer>
 
 
 
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="scripts.js"></script>
 	
 
 </body>
