--- a/codeInvaders.html
+++ b/codeInvaders.html
@@ -3,13 +3,13 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Code-Invaders</title>
-    <script src="codeInvader.js"></script>
+    <script src="codeInvaderL1.js"></script>
 	
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Chakra+Petch:400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
-
+	<script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
 
 </head>
 	
@@ -49,6 +49,7 @@
 	<div class="about">
 		<div class="container">
 			<canvas id="gc" width = "800" height = "500"></canvas>
+			<h3>Warning: This section of the site is not compatible with Internet Explorer or Mobile Devices</h3>
 		</div>
 	</div>
   
@@ -72,7 +73,6 @@
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="scripts.js"></script>
 	
 
 </body>
