--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="lessons.html">Lessons</a></li>
-				<li><a href="codeInvaders.html">Code Invaders</a></li>
 				<li><a href="signin.html">Sign In</a></li>
 
 			  </ul>
@@ -112,11 +111,12 @@
 		<div class="container">
 		  <h3>Code-Otter</h3>
 		  	<div class="socialLinks">
-		 	 <i class="fab fa-facebook"></i>
-		 	 <i class="fab fa-twitter-square"></i>
-		 	 <i class="fab fa-google-plus-square"></i>
-		 	 <i class="fas fa-envelope-square"></i>
+		 	 <a href="https://www.facebook.com/Code-Otter-2223646607678382/settings/?tab=settings"><i class="fab fa-facebook"></i></a>
+		 	 <a href="https://www.youtube.com/channel/UCdZ19oLMMaKGDxc6XZVgtaQ?view_as=subscriber"><i class="fab fa-google-plus-square"></i></a>
+		 	 <a href="https://twitter.com/otter_code" ><i class="fab fa-twitter-square"></i></a>
+		 	 <a href="mailto:thecodeotters@gmail.com" ><i class="fas fa-envelope-square"></i></a>
 			</div>
+			
 		</div>
 	  </footer>
 
