--- a/lesson_2_tasks.html
+++ b/lesson_2_tasks.html
@@ -127,9 +127,13 @@
 				print(str(num1) + " divided by " + str(num2)  + " divided " + str(num3) + " is " + str(num1 / num2 / num3))
 			
 		</p>
+
+		<h3> <a href="codeInvaders.html">Click Here</a>To Play Code Invaders - An Interactive Way For You To Test Your Knowledge</h3>
 	
 	
 		</div>
+
+		
 
 		
 		
