--- a/lesson_3_tasks.html
+++ b/lesson_3_tasks.html
@@ -181,6 +181,8 @@
 						gameOver = False
 				
 		</p>
+
+		<h3> <a href="codeInvaderL2.html">Click Here</a>To Play Code Invaders - An Interactive Way For You To Test Your Knowledge</h3>
 	
 	
 		</div>
