--- a/lesson_1_3.html
+++ b/lesson_1_3.html
@@ -54,7 +54,7 @@
 			<h1>Creating Your First Program</h1>
 			
 			<div class="lessonVid">
-			<<iframe width="560" height="315" src="https://www.youtube.com/embed/jX6kn9_U8qk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/lU3VodxcwBk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			<h3>Creating A New Python File</h3>
