--- a/lesson_2_1.html
+++ b/lesson_2_1.html
@@ -54,7 +54,7 @@
 			<h1>Numbers</h1>
 			
 			<div class="lessonVid">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/jX6kn9_U8qk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/sf3BX78ql6o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			<h3>Introduction</h3>
