--- a/lesson_2_3.html
+++ b/lesson_2_3.html
@@ -49,12 +49,12 @@
 		
 		<div class="container lessonSection">
 			<a href="lesson_2_2.html"><h4 class = "prev" >Previous<h4></a>
-			<a href="lesson_2_tasks.html"><h4 class = "next" >Next<h4></a>
+			<a href="lesson_2_4.html"><h4 class = "next" >Next<h4></a>
 		
 			<h1>Variables and User Input</h1>
 			
 			<div class="lessonVid">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/jX6kn9_U8qk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="560" height="315" src="https://www.youtube.com/watch?v=lU3VodxcwBk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			<h3>Introduction</h3>
