--- a/lesson_3_0.html
+++ b/lesson_3_0.html
@@ -54,7 +54,7 @@
 			<h1>Conditionals? What Are They?</h1>
 			
 			<div class="lessonVid">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/jX6kn9_U8qk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/rWFYGe1p8Hs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 
 			<br><br>
