--- a/signin.html
+++ b/signin.html
@@ -8,6 +8,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Chakra+Petch:400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
+
 
 
 </head>
@@ -47,11 +49,10 @@
 	<div class="signinpage">
 		<div class="container">
 			<div class="signinbox">
-				<h1> Sign In</h1>
+				<h1 id>Sign In</h1>
 				<div class = "signinanimation">
 					
 				</div>
-				<form action="/action_page.php">
 					<div class="form-group">
 					  <label for="email">Email address:</label>
 					  <input type="email" class="form-control" id="email">
@@ -60,13 +61,18 @@
 					  <label for="pwd">Password:</label>
 					  <input type="password" class="form-control" id="pwd">
 					</div>
+					<div class="form-group">
+					  <label for="username">Username: </label>
+					  <input type="text" class="form-control" id="username">
+					</div>
 					<div class="checkbox">
 					  <label><input type="checkbox"> Remember me</label>
 					</div>
-					<button type="submit" class="btn btn-default">Submit</button>
-				  </form>
+					<button type="submit" class="btn btn-default" id="signInBox">Sign In</button>
+					<button type="submit" class="btn btn-default" id="signUpBox">Sign Up</button>
 			</div>
 		</div>
+		<h3>Warning: Login is not available with Internet Explorer</h3>
 	</div>
 	
 
@@ -84,25 +90,14 @@
 
 
 
+	
 
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="scripts.js"></script>
 
-	<script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
-	<script>
-		// Initialize Firebase
-		var config = {
-			apiKey: "AIzaSyCYiO4wctdypgl5_ViUN4WNQwInrasMDIM",
-			authDomain: "code-otter.firebaseapp.com",
-			databaseURL: "https://code-otter.firebaseio.com",
-			projectId: "code-otter",
-			storageBucket: "code-otter.appspot.com",
-			messagingSenderId: "993202102328"
-		};
-		firebase.initializeApp(config);
-	</script>
+	
 	
 </body>
 </html>
